--- a/client/src/components/FullCast/_fullCast.scss
+++ b/client/src/components/FullCast/_fullCast.scss
@@ -139,7 +139,21 @@
 
 @media screen and (max-width: 640px) {
   .full__cast {
+    &__detail {
+      &--title {
+        font-size: 1.25rem;
+        font-weight: 500;
+        font-family: var(--font-family-1);
+      }
+    }
+
     &__container {
+      &--title {
+        font-size: 1.25rem;
+        font-weight: 500;
+        font-family: var(--font-family-1);
+      }
+
       &__inner {
         grid-template-columns: 1fr 1fr;
         gap: 0rem;
