--- a/client/src/components/Reviews/_reviews.scss
+++ b/client/src/components/Reviews/_reviews.scss
@@ -78,5 +78,10 @@
 @media screen and (max-width: 640px) {
   .reviews {
     padding: 0rem 1rem;
+
+    &__title {
+      font-weight: 500;
+      font-family: var(--font-family-1);
+    }
   }
 }
