--- a/client/src/pages/ActorDetail/_actorDetail.scss
+++ b/client/src/pages/ActorDetail/_actorDetail.scss
@@ -119,17 +119,17 @@
           }
 
           .name {
-            font-size: 1rem;
+            //font-size: 1rem;
           }
 
           .place,
           .birth {
-            font-size: 0.8rem;
+            //font-size: 0.9rem;
           }
 
           .tag {
             width: 100%;
-            font-size: 0.9rem;
+            font-size: 1rem;
           }
         }
       }
@@ -158,6 +158,40 @@
       &__error {
         width: 100%;
         height: 75vh;
+      }
+
+      &__img-name-birth-place {
+        margin-bottom: 0rem;
+        flex-direction: row;
+
+        &--image {
+          width: 120px;
+          height: 180px;
+          margin-right: 1rem;
+          margin-bottom: 1rem;
+
+          .img {
+            width: 120px;
+            height: 180px;
+            border-radius: var(--border-radius-1);
+          }
+        }
+
+        &__detail {
+          .name {
+            font-weight: 500;
+            font-size: 1.25rem;
+            font-family: var(--font-family-1);
+          }
+        }
+      }
+
+      &__bio {
+        h3 {
+          font-weight: 500;
+          font-size: 1.25rem;
+          font-family: var(--font-family-1);
+        }
       }
     }
   }
