--- a/client/src/components/AllBackdrops/_allBackdrops.scss
+++ b/client/src/components/AllBackdrops/_allBackdrops.scss
@@ -132,9 +132,18 @@
   .all__backdrops {
     &__detail {
       &--title {
-        font-size: 1.25rem;
+        font-size: 1rem;
         font-weight: 500;
         font-family: var(--font-family-1);
+
+        .length {
+          height: 30px;
+          width: 30px;
+
+          span {
+            font-size: 0.8rem;
+          }
+        }
       }
     }
 
