--- a/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
+++ b/client/src/components/CastBackdropsVideo/_castBackdropsVideo.scss
@@ -66,8 +66,18 @@
     &__videos {
       &__title-1,
       &__title-2 {
+        font-size: 1rem;
         font-weight: 500;
         font-family: var(--font-family-1);
+
+        .length {
+          height: 30px;
+          width: 30px;
+
+          span {
+            font-size: 0.8rem;
+          }
+        }
       }
     }
   }
