--- a/client/src/components/FullCast/_fullCast.scss
+++ b/client/src/components/FullCast/_fullCast.scss
@@ -149,9 +149,18 @@
 
     &__container {
       &--title {
-        font-size: 1.25rem;
+        font-size: 1rem;
         font-weight: 500;
         font-family: var(--font-family-1);
+
+        .length {
+          height: 30px;
+          width: 30px;
+
+          span {
+            font-size: 0.8rem;
+          }
+        }
       }
 
       &__inner {
