--- a/client/src/components/Reviews/_reviews.scss
+++ b/client/src/components/Reviews/_reviews.scss
@@ -80,8 +80,18 @@
     padding: 0rem 1rem;
 
     &__title {
+      font-size: 1rem;
       font-weight: 500;
       font-family: var(--font-family-1);
+
+      .length {
+        height: 30px;
+        width: 30px;
+
+        span {
+          font-size: 0.8rem;
+        }
+      }
     }
   }
 }
