--- a/client/src/pages/Login/_login.scss
+++ b/client/src/pages/Login/_login.scss
@@ -130,6 +130,12 @@
     &__inner {
       &__form {
         width: 250px;
+
+        &--title {
+          font-weight: 500;
+          font-size: 1.5rem;
+          font-family: var(--font-family-1);
+        }
       }
     }
   }
