--- a/client/src/pages/Register/_register.scss
+++ b/client/src/pages/Register/_register.scss
@@ -126,6 +126,12 @@
     &__inner {
       &__form {
         width: 250px;
+
+        &--title {
+          font-weight: 500;
+          font-size: 1.5rem;
+          font-family: var(--font-family-1);
+        }
       }
     }
   }
