--- a/client/src/components/Header/_header.scss
+++ b/client/src/components/Header/_header.scss
@@ -69,7 +69,7 @@
         margin: 0;
         display: flex;
         align-items: center;
-        margin-left: 0.75rem;
+        margin-left: 1rem;
       }
 
       .watchlist:hover {
@@ -168,7 +168,7 @@
       }
 
       &__two {
-        width: calc(100vw - (20% + 0.5rem));
+        width: calc(100vw - (20% + 1rem));
         background: #000;
 
         &__menu-icon {
@@ -214,7 +214,7 @@
 }
 
 .activeRoute {
-  color: #000 !important;
-  background: var(--primary) !important;
+  color: var(--primary) !important;
+  //background: var(--primary) !important;
   border-radius: 50% !important;
 }
