--- a/client/src/components/ImageViewer/_imageViewer.scss
+++ b/client/src/components/ImageViewer/_imageViewer.scss
@@ -20,19 +20,6 @@
     border-radius: var(--border-radius-1);
     width: 1000px;
     height: 550px;
-    //box-shadow: 0px 0px 50px var(--primary);
-
-    &--length {
-      position: absolute;
-      z-index: 2;
-      top: 0rem;
-      right: 0rem;
-      background: rgba(0, 0, 0, 0.5);
-      color: #fff;
-      padding: 0.5rem 1rem;
-      border-top-right-radius: var(--border-radius-1);
-      border-bottom-left-radius: var(--border-radius-1);
-    }
 
     .img-1 {
       width: 1000px;
@@ -53,6 +40,45 @@
       top: 45%;
       display: flex;
       justify-content: space-between;
+      display: none;
+      transition: var(--transition);
+
+      &--length {
+        font-weight: 400;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 0.5rem 1rem;
+        border-radius: 50px;
+        background: rgba(0, 0, 0, 0.75) !important;
+        color: #fff !important;
+      }
+
+      p {
+        margin: 0;
+        border-radius: 50%;
+        height: 35px;
+        width: 35px;
+        position: relative;
+        cursor: pointer;
+        background: rgba(0, 0, 0, 0.75) !important;
+        color: #fff !important;
+
+        span {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -45%);
+        }
+      }
+
+      p:first-child {
+        margin-left: 1rem;
+      }
+
+      p:last-child {
+        margin-right: 1rem;
+      }
     }
   }
 }
@@ -63,6 +89,10 @@
       border-radius: unset;
       width: 100%;
       height: 550px;
+
+      &--length {
+        border-top-right-radius: 0px;
+      }
 
       .img-1 {
         border-radius: unset;
@@ -106,6 +136,14 @@
   .viewer {
     &__inner {
       height: 325px;
+
+      &__buttons {
+        &--length {
+          font-weight: 500;
+          padding: 0.5rem 1rem;
+          font-size: 0.8rem;
+        }
+      }
 
       .img-2 {
         height: 325px;
