--- a/client/src/other/Error/_error.scss
+++ b/client/src/other/Error/_error.scss
@@ -2,10 +2,11 @@
   padding: 0 1rem;
   text-align: center;
   font-size: 1.25rem;
+  font-weight: 500;
 }
 
 @media screen and (max-width: 786px) {
   .err-msg {
-    font-size: 1rem;
+    //font-size: 1rem;
   }
 }
