--- a/client/src/components/ImageViewer/_imageViewer.scss
+++ b/client/src/components/ImageViewer/_imageViewer.scss
@@ -19,11 +19,9 @@
     transition: var(--transition);
     border-radius: var(--border-radius-1);
     width: 1000px;
-    height: 550px;
 
     .img-1 {
       width: 1000px;
-      height: 550px;
       border-radius: var(--border-radius-1);
       box-shadow: var(--box-shadow-1);
     }
@@ -88,7 +86,6 @@
     &__inner {
       border-radius: unset;
       width: 100%;
-      height: 550px;
 
       &--length {
         border-top-right-radius: 0px;
@@ -97,7 +94,6 @@
       .img-1 {
         border-radius: unset;
         width: 100%;
-        height: 550px;
       }
 
       &__buttons {
@@ -111,7 +107,6 @@
   .viewer {
     &__inner {
       width: 100vw;
-      height: 450px;
       border-radius: unset;
 
       .img-1 {
@@ -121,7 +116,6 @@
       .img-2 {
         display: flex;
         width: 100vw;
-        height: 450px;
         border-radius: unset;
       }
 
@@ -135,18 +129,12 @@
 @media screen and (max-width: 640px) {
   .viewer {
     &__inner {
-      height: 325px;
-
       &__buttons {
         &--length {
           font-weight: 500;
           padding: 0.5rem 1rem;
           font-size: 0.8rem;
         }
-      }
-
-      .img-2 {
-        height: 325px;
       }
     }
   }
@@ -155,15 +143,13 @@
 @media screen and (max-width: 376px) {
   .viewer {
     &__inner {
-      height: 225px;
-
       .img-2 {
         display: none;
       }
 
       .img-3 {
         display: flex;
-        height: 225px;
+        width: 100vw;
       }
     }
   }
