--- a/client/src/components/Card/_card.scss
+++ b/client/src/components/Card/_card.scss
@@ -115,14 +115,13 @@
         font-weight: 500;
         text-align: center;
         margin: 1rem 1rem 0.25rem 1rem;
-        //font-family: Verdana, Geneva, Tahoma, sans-serif;
       }
 
       &--date {
         margin: 0rem 1rem 1rem 1rem;
         font-size: 0.8rem;
         font-weight: 400;
-        //font-family: Verdana, Geneva, Tahoma, sans-serif;
+        color: rgb(156, 156, 156) !important;
       }
 
       &__options {
@@ -221,6 +220,58 @@
 
     &__info {
       &__inner {
+        &--title {
+          //font-size: 0.9rem;
+        }
+
+        &--date {
+          //font-weight: 500;
+          //font-size: 0.7rem;
+        }
+
+        &__options {
+          width: 100%;
+          justify-content: center;
+          left: 0;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 376px) {
+  .card {
+    height: 250px;
+
+    &--image {
+      height: 250px;
+
+      .img-1,
+      .img-icon-1 {
+        display: none;
+      }
+
+      .img-2 {
+        display: flex;
+        height: 250px;
+        width: 100%;
+      }
+
+      .img-icon-2 {
+        display: flex;
+      }
+    }
+
+    &__info {
+      &__inner {
+        &--title {
+          font-size: 0.8rem;
+        }
+
+        &--date {
+          font-size: 0.7rem;
+        }
+
         &__options {
           width: 100%;
           justify-content: center;
