--- a/client/src/components/List/_list.scss
+++ b/client/src/components/List/_list.scss
@@ -99,10 +99,10 @@
 
     &__buttons {
       z-index: -1;
-      justify-content: space-between;
+      justify-content: flex-start;
       width: 100%;
       position: absolute;
-      bottom: 45%;
+      top: 0.5rem;
       display: flex;
       align-items: center;
       padding: 0.5rem 0;
@@ -131,7 +131,7 @@
           position: absolute;
           top: 50%;
           left: 50%;
-          transform: translate(-50%, -50%);
+          transform: translate(-50%, -45%);
         }
       }
 
@@ -294,17 +294,21 @@
 
       &__buttons {
         z-index: 1 !important;
-        justify-content: space-between;
         left: 0rem;
         right: 0rem;
-        bottom: 42.5%;
 
         p:first-child {
           margin-left: 1rem;
+          margin-right: 0.5rem;
+          width: 30px;
+          height: 30px;
         }
 
         p:last-child {
           margin-right: 1rem;
+          margin-left: 0.5rem;
+          width: 30px;
+          height: 30px;
         }
 
         .length {
