--- a/client/src/components/Card/_card.scss
+++ b/client/src/components/Card/_card.scss
@@ -265,11 +265,11 @@
     &__info {
       &__inner {
         &--title {
-          font-size: 0.8rem;
+          //font-size: 0.8rem;
         }
 
         &--date {
-          font-size: 0.7rem;
+          //font-size: 0.7rem;
         }
 
         &__options {
