--- a/client/src/components/AllVideos/_allVideos.scss
+++ b/client/src/components/AllVideos/_allVideos.scss
@@ -44,7 +44,7 @@
       width: 100%;
       display: flex;
       align-items: flex-start;
-      font-family: var(--fomt-family-2);
+      font-family: var(--font-family-2);
     }
 
     &--title {
@@ -67,7 +67,7 @@
     &--title {
       font-size: 1.25rem;
       font-weight: 700;
-      font-family: var(--fomt-family-2);
+      font-family: var(--font-family-2);
 
       display: flex;
       align-items: center;
