--- a/client/src/styles/main.scss
+++ b/client/src/styles/main.scss
@@ -169,7 +169,7 @@
   background: linear-gradient(
     to right,
     rgba(255, 255, 255, 1) 20%,
-    rgba(255, 255, 255, 0.8)
+    rgba(255, 255, 255, 0.75)
   );
 }
 
@@ -177,23 +177,23 @@
   background: linear-gradient(
     to right,
     rgb(51, 51, 51, 1) 20%,
-    rgb(51, 51, 51, 0.8)
+    rgb(51, 51, 51, 0.75)
   );
 }
 
 .lightGradient1 {
   background: linear-gradient(
-    to right top,
+    to right,
     rgba(255, 255, 255, 1) 20%,
-    rgba(255, 255, 255, 0)
+    rgba(255, 255, 255, 0.25)
   );
 }
 
 .darkGradient1 {
   background: linear-gradient(
-    to right top,
-    rgb(51, 51, 51, 1) 20%,
-    rgba(34, 34, 34, 0)
+    to right,
+    rgb(51, 51, 51, 1) 10%,
+    rgba(51, 51, 51, 0.5)
   );
 }
 
@@ -214,18 +214,14 @@
 }
 
 .lightCoverGradient {
-  background: linear-gradient(
-    to right top,
-    #fff 20%,
-    rgba(255, 255, 255, 0.75)
-  );
+  background: linear-gradient(to right top, #fff 20%, rgba(255, 255, 255, 0.5));
 }
 
 .darkCoverGradient {
   background: linear-gradient(
     to right top,
     rgb(51, 51, 51, 1) 20%,
-    rgb(51, 51, 51, 0.75)
+    rgb(51, 51, 51, 0.5)
   );
 }
 
@@ -246,12 +242,10 @@
 }
 
 .whiteBorder {
-  //border: 2px solid #fff;
   box-shadow: 0 0 3px #fff;
 }
 
 .blackBorder {
-  //border: 2px solid var(--dark-1);
   box-shadow: 0 0 3px var(--dark-1);
 }
 
