--- a/client/src/components/ImageViewer/_imageViewer.scss
+++ b/client/src/components/ImageViewer/_imageViewer.scss
@@ -40,24 +40,13 @@
       align-items: center;
       justify-content: flex-start;
       transition: var(--transition);
-
-      &--length {
-        font-weight: 400;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0.5rem 1rem;
-        border-radius: 50px;
-        background: rgba(0, 0, 0, 0.75) !important;
-        color: #fff !important;
-        margin: 0 1rem;
-      }
+      margin-left: 1rem;
 
       p {
         margin: 0;
         border-radius: 50%;
-        height: 35px;
-        width: 35px;
+        height: 50px;
+        width: 50px;
         position: relative;
         cursor: pointer;
         background: rgba(0, 0, 0, 0.75) !important;
@@ -71,12 +60,24 @@
         }
       }
 
-      p:first-child {
-        margin-left: 1rem;
-      }
+      &--length {
+        position: relative;
+        font-size: 0.8rem;
+        font-weight: 500;
+        border-radius: 50px;
+        background: rgba(0, 0, 0, 0.75) !important;
+        color: #fff !important;
+        margin: 0 1rem;
+        height: 82px;
+        width: 82px;
+        margin: 0 0.5rem;
 
-      p:last-child {
-        margin-right: 1rem;
+        span {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -45%);
+        }
       }
     }
   }
@@ -134,16 +135,23 @@
         display: flex !important;
         justify-content: space-between;
 
+        p:last-child {
+          margin-right: 2rem;
+        }
+
         p {
           width: 30px;
           height: 30px;
         }
 
         &--length {
-          font-weight: 500;
-          padding: 0.5rem 1rem;
-          font-size: 0.8rem;
-          margin: 0;
+          width: 72px;
+          height: 30px;
+
+          span {
+            font-size: 0.7rem;
+            font-weight: 400;
+          }
         }
       }
     }
