--- a/client/src/components/ReviewModal/_reviewModal.scss
+++ b/client/src/components/ReviewModal/_reviewModal.scss
@@ -16,11 +16,12 @@
     height: 100%;
     max-width: 100%;
     padding: 0.5rem 0.75rem;
-    margin: 0 0rem 1.5rem 0rem;
+    margin: 0 0.25rem 1.5rem 0.25rem;
     border-top-left-radius: var(--border-radius-1);
     border-top-right-radius: var(--border-radius-1);
     overflow-y: scroll;
     border-radius: var(--border-radius-1);
+    box-shadow: 0 0 3px #000;
   }
 }
 
