--- a/client/src/components/Menu/_menu.scss
+++ b/client/src/components/Menu/_menu.scss
@@ -143,7 +143,7 @@
       &__genre {
         margin-bottom: 1rem;
         padding: 1rem 1rem 1rem 1rem;
-        height: calc(100vh - 420.4px);
+        max-height: calc(100vh - 420.4px);
         overflow-y: scroll;
 
         &__inner {
@@ -186,7 +186,7 @@
   .menu {
     &__inner {
       &__genre {
-        height: calc(100vh - 420.4px);
+        //height: calc(100vh - 420.4px);
       }
     }
   }
