--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -75,6 +75,8 @@
 
 @media screen and (max-width: 640px) {
   .search__results {
+    height: 40vh;
+
     &__inner {
       &__card {
         &__title-date {
