--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -71,6 +71,8 @@
 @media screen and (max-width: 786px) {
   .search__results {
     max-height: 60vh;
+    top: 3rem;
+    border-radius: 0px;
   }
 }
 
