--- a/client/src/components/Search/_search.scss
+++ b/client/src/components/Search/_search.scss
@@ -90,12 +90,12 @@
     justify-content: center;
 
     &__switch {
-      border-radius: 0px;
+      //border-radius: 0px;
     }
 
     &__search-bar {
       width: 100%;
-      border-radius: 0px;
+      //border-radius: 0px;
 
       form {
         width: 100%;
@@ -103,7 +103,7 @@
         input {
           width: 90%;
           height: 40px;
-          border-radius: 0px;
+          //border-radius: 0px;
         }
 
         span {
