--- a/client/src/other/Options/_options.scss
+++ b/client/src/other/Options/_options.scss
@@ -55,7 +55,7 @@
     &__current {
       font-weight: 400;
       height: 40px;
-      border-radius: 0px;
+      //border-radius: 0px;
       margin-right: 3px;
     }
 
@@ -63,7 +63,7 @@
       font-weight: 400;
       height: 40px;
       top: 2.7rem;
-      border-radius: 0px;
+      //border-radius: 0px;
     }
   }
 }
