--- a/client/src/components/SearchResults/_searchResults.scss
+++ b/client/src/components/SearchResults/_searchResults.scss
@@ -78,7 +78,7 @@
 
 @media screen and (max-width: 640px) {
   .search__results {
-    height: 60vh;
+    //height: 60vh;
 
     &__inner {
       &__card {
